2022-10-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp (usage): Use more
	communicative metasyntactic variable names.
	* src/preproc/preconv/preconv.1.man (Synopsis, Options): Align
	with updated usage message.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp (main): Handle `getopt_long()`
	return value more idiomatically.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp: Fix code style nits.
	(main): Use standard C library symbols `EXIT_SUCCESS` and
	`EXIT_FAILURE` instead of integer literals as arguments to
	`exit()`.  Add assertion.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tty.cpp: Alter usage message handling.
	(usage): Summarize purpose of program and steer reader to man
	page (only) if help was explicitly requested, and exit
	successfully from here...
	(main): ...instead of calling scope.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grotty/tty.cpp: Fix code style nits.
	(main): Use standard C library symbols `EXIT_SUCCESS` and
	`EXIT_FAILURE` instead of integer literals as arguments to
	`exit()`.  Replace `assert(0)` call with communicative
	predicate.

2022-10-24  G. Branden Robinson <g.branden.robinson@gmail.com>
